Improved parsable units

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,8 +1,8 @@
 This package should look like Unitful.jl but behave like DynamicQuantities.jl under the hood
 
 Tasks:
-0. Register percent/rad/deg/rpm (can overwrite if not PermanentDict)
-0. Make sure even dimensionless functions support f(u::AbstractDimensions) = assert_dimensionless(u)
+0. Make sure unit output is parsable by "uparse" u"m/s^(2)" should print "m/s^(s)"
+        add appropriate methods with "pretty" option to string(x::Union{AbstractUnitLike, UnionQuantity}) as well
 1. Build basic tests
 2. Migrate to TankMonitor module and run
 3. Publish version v0.0.1
