--- a/ToDo.txt
+++ b/ToDo.txt
@@ -13,9 +13,12 @@ Tasks:
         -   Iterate over registry and list other units that match the query dimension
 3.  Consider a special object QuantTransform(scale::AbstractArray, units::UnitTransform)<:AbstractArray{<:Quantity}
     -   I may still need to build "zero(::Type{Quantity{T, D}})" to produce a special "Union{D{R},UnknownDims}"
-        -   There's too many "zero(T)" calls in base library, need to define UknownDims{P}()
-        -   You can add any quantity to "Quantity(0, UknownDims())" to return just adding the numbers
-        -   This logic is done at the "equaldims" function
+        -   There's too many "zero(T)" calls in base library, need to define a sentinel value
+        -   D(missing) gives you the sentinel value (typemax in all dimensions)
+        -   sameunits now has three branches
+            -   If equal, return first value
+            -   ElseIf first value is unkown, return second value
+            -   Else throw error
         
     -   This is a KILLER FEATURE because Unitful CANT DO THIS with mixed dimensions, and DynamicQuantities can't do this at all
     -   All CONSISTENT quantity transforms mQ can be broken down into mQ.scale, mQ.units
